// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering, with 2 suggestions, one being already added should match 1`] = `
<Styled(Container)>
  <Styled(Content)>
    <Styled(Form)>
      <Styled(Item)
        fixedLabel={true}
      >
        <Styled(Label)>
          Tvshow’s name:
        </Styled(Label)>
        <Styled(Input)
          autoCapitalize="words"
          autoFocus={true}
          onChangeText={[Function]}
        />
      </Styled(Item)>
    </Styled(Form)>
    <Styled(List)>
      <SuggestionItem
        alreadyAdded={true}
        onPress={[Function]}
        poster="http://poster1.png"
        subtitle="2011"
        suggestionKey={0}
        title="A tvshow"
      />
      <SuggestionItem
        alreadyAdded={false}
        onPress={[Function]}
        poster="http://poster5.png"
        subtitle="2015"
        suggestionKey={1}
        title="A other tvshow"
      />
    </Styled(List)>
  </Styled(Content)>
</Styled(Container)>
`;

exports[`Rendering, with no suggestions should match 1`] = `
<Styled(Container)>
  <Styled(Content)>
    <Styled(Form)>
      <Styled(Item)
        fixedLabel={true}
      >
        <Styled(Label)>
          Tvshow’s name:
        </Styled(Label)>
        <Styled(Input)
          autoCapitalize="words"
          autoFocus={true}
          onChangeText={[Function]}
        />
      </Styled(Item)>
    </Styled(Form)>
    <Styled(List) />
  </Styled(Content)>
</Styled(Container)>
`;
